--- a/resources/skins.citizen.styles/skinning/content.tables.less
+++ b/resources/skins.citizen.styles/skinning/content.tables.less
@@ -13,7 +13,7 @@
 	margin: var( --space-md ) 0;
 	overflow-x: auto;
 	border-collapse: collapse;
-	border-color: var( --border-color-base );
+	border-color: var( --border-color-table, var( --border-color-base ) );
 	border-radius: var( --border-radius-medium );
 	box-shadow: var( --box-shadow-border );
 	.mixin-citizen-font-styles( 'small' );
@@ -75,7 +75,7 @@
 	/* Add border separator between caption, tr, thead, tbody, tfoot */
 	> :where( caption, tr, thead, tbody, tfoot ):not( [ hidden ] ) ~ :where( caption, tr, thead, tbody, tfoot ):not( [ hidden ] ),
 	> :where( thead, tbody, tfoot ) > :where( tr, thead, tbody, tfoot ):not( [ hidden ] ) ~ :where( tr, thead, tbody, tfoot ):not( [ hidden ] ) {
-		border-top: var( --border-width-base ) solid var( --border-color-base );
+		border-top: var( --border-width-base ) solid var( --border-color-table, var( --border-color-base ) );
 	}
 
 	/* Reset border radius between thead tbody, tbody tfoot, etc. */
@@ -112,8 +112,8 @@
 	&--border {
 		tr {
 			> :is( th, td ):not( [ hidden ] ) {
-				border-right: var( --border-width-base ) solid var( --border-color-base );
-				border-left: var( --border-width-base ) solid var( --border-color-base );
+				border-right: var( --border-width-base ) solid var( --border-color-table, var( --border-color-base ) );
+				border-left: var( --border-width-base ) solid var( --border-color-table, var( --border-color-base ) );
 
 				&:first-child {
 					border-left: 0;
