--- a/resources/skins.citizen.styles/skinning/content.tables.less
+++ b/resources/skins.citizen.styles/skinning/content.tables.less
@@ -12,14 +12,11 @@
 	max-width: max-content; // Needed for the border
 	margin: var( --space-md ) 0;
 	overflow-x: auto;
-	border-collapse: collapse;
 	border-color: var( --border-color-table, var( --border-color-base ) );
 	border-radius: var( --border-radius-medium );
-	box-shadow: var( --box-shadow-border );
-	.mixin-citizen-font-styles( 'small' );
 
 	caption {
-		padding: var( --space-xs ) var( --space-sm );
+		padding-block: var( --space-xs ); padding-inline: var( --space-sm );
 		color: var( --color-emphasized );
 		text-align: start;
 		.mixin-citizen-font-styles( 'heading-4' );
@@ -37,7 +34,7 @@
 
 	th,
 	td {
-		padding: var( --space-xs ) var( --space-sm );
+		padding-block: var( --space-xs ); padding-inline: var( --space-sm );
 	}
 
 	tr {
@@ -112,7 +109,7 @@
 	&--border {
 		tr {
 			> :is( th, td ):not( [ hidden ] ) {
-				border-right-width: var( --border-width-base ); border-style: solid;
+				border-right-width: var( --border-width-base ); border-style: solid; 
 				border-left-width: var( --border-width-base ); border-style: solid; border-color: inherit;
 
 				&:first-child {
