--- a/resources/skins.citizen.styles/skinning/content.tables.less
+++ b/resources/skins.citizen.styles/skinning/content.tables.less
@@ -12,11 +12,14 @@
 	max-width: max-content; // Needed for the border
 	margin: var( --space-md ) 0;
 	overflow-x: auto;
-	border-color: var( --border-color-table, var( --border-color-base ) );
+	border-collapse: collapse;
+	border-color: var( --border-color-base );
 	border-radius: var( --border-radius-medium );
+	box-shadow: var( --box-shadow-border );
+	.mixin-citizen-font-styles( 'small' );
 
 	caption {
-		padding-block: var( --space-xs ); padding-inline: var( --space-sm );
+		padding: var( --space-xs ) var( --space-sm );
 		color: var( --color-emphasized );
 		text-align: start;
 		.mixin-citizen-font-styles( 'heading-4' );
@@ -34,7 +37,7 @@
 
 	th,
 	td {
-		padding-block: var( --space-xs ); padding-inline: var( --space-sm );
+		padding: var( --space-xs ) var( --space-sm );
 	}
 
 	tr {
@@ -72,7 +75,7 @@
 	/* Add border separator between caption, tr, thead, tbody, tfoot */
 	> :where( caption, tr, thead, tbody, tfoot ):not( [ hidden ] ) ~ :where( caption, tr, thead, tbody, tfoot ):not( [ hidden ] ),
 	> :where( thead, tbody, tfoot ) > :where( tr, thead, tbody, tfoot ):not( [ hidden ] ) ~ :where( tr, thead, tbody, tfoot ):not( [ hidden ] ) {
-		border-top-width: var( --border-width-base ); border-style: solid; border-color: inherit;
+		border-top: var( --border-width-base ) solid var( --border-color-base );
 	}
 
 	/* Reset border radius between thead tbody, tbody tfoot, etc. */
@@ -109,8 +112,8 @@
 	&--border {
 		tr {
 			> :is( th, td ):not( [ hidden ] ) {
-				border-right-width: var( --border-width-base ); border-style: solid; 
-				border-left-width: var( --border-width-base ); border-style: solid; border-color: inherit;
+				border-right: var( --border-width-base ) solid var( --border-color-base );
+				border-left: var( --border-width-base ) solid var( --border-color-base );
 
 				&:first-child {
 					border-left: 0;
