--- a/resources/skins.citizen.styles/skinning/content.media-screen.less
+++ b/resources/skins.citizen.styles/skinning/content.media-screen.less
@@ -20,8 +20,8 @@ figure[ typeof~='mw:File/Frame' ] {
 			max-width: 100%;
 			height: auto;
 			contain: strict;
-			transition: var( --transition-hover );
-			transition-property: transform;
+			transition: none;
+			transition-property: none;
 
 			// Prevent constraining image width in tables
 			table & {
@@ -33,7 +33,7 @@ figure[ typeof~='mw:File/Frame' ] {
 		&:hover:not( .lazy ):not( .new ) {
 			img,
 			source {
-				transform: var( --transform-image-hover );
+				transform: none;
 			}
 		}
 	}
@@ -44,7 +44,7 @@ figure[ typeof~='mw:File/Frame' ] {
 	> a:first-child,
 	> span:first-child {
 		display: block;
-		border-radius: var( --border-radius-base );
+		border-radius: var( --border-radius-sharp );
 	}
 
 	// Broken file styles
