--- a/resources/skins.citizen.styles/skinning/elements.less
+++ b/resources/skins.citizen.styles/skinning/elements.less
@@ -13,9 +13,9 @@ img {
 }
 
 hr {
-	margin-block: var( --space-md );
+	margin-block: var(--space-md);
 	border: 0;
-	border-top: var( --border-width-base ) solid var( --border-color-base );
+	border-top: var(--border-width-base) solid var(--border-color-base);
 }
 
 /* Structural Elements */
@@ -25,47 +25,52 @@ h3,
 h4,
 h5,
 h6 {
-	// It seems that many wikis have the expectation that headers have a bottom margin
+	/* Many wikis expect headers to have a bottom margin */
 	margin-block-end: 0.25em;
-	color: var( --color-emphasized );
-}
-
-h1,
-h2 {
-	margin-block-start: 2em;
-}
-
-h3,
-h4 {
-	margin-block-start: 1.5em;
-}
-
-h5,
-h6 {
-	margin-block-start: 1.25em;
-	font-size: var( --font-size-medium );
-	font-weight: var( --font-weight-semi-bold );
+	color: var(--color-emphasized);
 }
 
 h1 {
-	.mixin-citizen-font-styles( 'heading-1' );
+	margin-block: var(--margin-h1-block, 1em 0.25em);
+	.mixin-citizen-font-styles('heading-1');
 }
 
 h2 {
-	.mixin-citizen-font-styles( 'heading-2' );
+	margin-block: var(--margin-h2-block, 1em 0.25em);
+	.mixin-citizen-font-styles('heading-2');
 }
 
 h3 {
-	.mixin-citizen-font-styles( 'heading-3' );
+	margin-block: var(--margin-h3-block, 0.75em 0.25em);
+	.mixin-citizen-font-styles('heading-3');
 }
 
 h4 {
-	.mixin-citizen-font-styles( 'heading-4' );
+	margin-block: var(--margin-h4-block, 0.75em 0.25em);
+	.mixin-citizen-font-styles('heading-4');
+}
+
+h5 {
+	margin-block: var(--margin-h5-block, 0.5em 0.25em);
+	font-size: var(--font-size-h5, var(--font-size-medium));
+	font-weight: var(--font-weight-h5, var(--font-weight-semi-bold));
+}
+
+h6 {
+	margin-block: var(--margin-h6-block, 0.5em 0.25em);
+	font-size: var(--font-size-h6, var(--font-size-medium));
+	font-weight: var(--font-weight-h6, var(--font-weight-semi-bold));
 }
 
 p {
-	margin-block: var( --space-md );
-	overflow-wrap: break-word; // Force wrap to preserve layout
+	overflow-wrap: break-word; /* Force wrap to preserve layout */
+
+	&:first-child {
+		margin-block: 1em;
+	}
+	&:not(:first-child) {
+		margin-block-end: 1em;
+	}
 }
 
 p img {
@@ -75,8 +80,8 @@ p img {
 ol,
 ul {
 	padding: 0;
-	margin-block: var( --space-md );
-	margin-inline: var( --space-xxl ) 0;
+	margin-block: var(--space-md);
+	margin-inline: var(--space-xl);
 
 	ol,
 	ul {
@@ -85,16 +90,16 @@ ul {
 }
 
 dt {
-	font-weight: var( --font-weight-semi-bold );
-	color: var( --color-emphasized );
+	font-weight: var(--font-weight-normal);
+	color: var(--color-base);
 }
 
 dl {
-	margin-block: var( --space-md );
+	margin-block: var(--space-md);
 }
 
 dd {
-	margin-inline-start: var( --space-xl );
+	margin-inline-start: var(--space-xl);
 }
 
 pre,
@@ -103,40 +108,40 @@ tt,
 kbd,
 samp,
 .mw-code {
-	font-family: var( --font-family-monospace );
-	.mixin-citizen-font-styles( 'small' );
+	font-family: var(--font-family-monospace);
 }
 
 pre,
 code,
 .mw-code {
-	color: var( --color-emphasized );
-	background-color: var( --color-surface-2 );
-	border: var( --border-width-base ) solid var( --border-color-base );
+	color: var(--color-display-code, var(--color-base));
+	background-color: var(--color-surface-2);
+	border: var(--border-width-base) solid var(--border-color-base);
 }
 
 code {
 	padding: 2px 4px;
-	border-radius: var( --border-radius-base );
+	border-radius: var(--border-radius-base);
 }
 
 pre,
 .mw-code {
 	padding: 1rem;
 	overflow: auto;
-	border-radius: var( --border-radius-large );
+	border-radius: var(--border-radius-large);
 }
 
 /* Forms */
 fieldset {
-	padding: var( --space-xs ) var( --space-md );
-	margin: var( --space-md ) 0;
-	border: var( --border-width-base ) solid var( --border-color-base );
+	padding: var(--space-xs) var(--space-md);
+	margin: var(--space-md) 0;
+	border: var(--border-width-base) solid var(--border-color-base);
+	border-radius: var(--border-radius-medium);
 }
 
 legend {
-	padding: var( --space-xxs );
-	color: var( --color-subtle );
+	padding: var(--space-xxs);
+	color: var(--color-base);
 }
 
 /* Figure */
