--- a/skinStyles/extensions/Capiunto/capiunto.infobox.main.less
+++ b/skinStyles/extensions/Capiunto/capiunto.infobox.main.less
@@ -14,7 +14,7 @@
 	float: none;
 	clear: none;
 	margin: 0 auto var( --space-md ) auto;
-	font-size: var( --font-size-small );
+	font-size: var( --font-size-medium );
 	color: var( --color-base );
 	background-color: var( --color-surface-2 );
 	border-color: var( --border-color-base );
@@ -22,7 +22,7 @@
 
 	caption,
 	&-top {
-		font-size: 1rem;
+		font-size: var(--font-size-large);
 		font-weight: var( --font-weight-semi-bold );
 	}
 
