--- a/resources/variables.less
+++ b/resources/variables.less
@@ -65,18 +65,18 @@
  * Based on Material Theme Palenight
  * https://material-theme.site
 */
-@color-syntax-red-dark: #f07178;
-@color-syntax-orange-dark: #f78c6c;
-@color-syntax-yellow-dark: #ffcb6b;
-@color-syntax-green-dark: #c3e88d;
-@color-syntax-cyan-dark: #89ddff;
-@color-syntax-blue-dark: #82aaff;
-@color-syntax-paleblue-dark: #b2ccd6;
-@color-syntax-purple-dark: #c792ea;
-@color-syntax-brown-dark: #916b53;
-@color-syntax-pink-dark: #ff9cac;
-@color-syntax-violet-dark: #bb80b3;
-@color-syntax-grey-dark: #676E95;
+@color-syntax-red-dark: oklch(0.6484 0.2098 25.22);
+@color-syntax-orange-dark: oklch(0.7273 0.0949 63.82);
+@color-syntax-yellow-dark: oklch(0.8249 0.097 82.26);
+@color-syntax-green-dark: oklch(0.7683 0.1103 133);
+@color-syntax-cyan-dark: oklch(0.7231 0.0916 206.31);
+@color-syntax-blue-dark: oklch(0.6149 0.1394 244.93);
+@color-syntax-paleblue-dark: oklch(0.7304 0.1213 245.3);
+@color-syntax-purple-dark: oklch(0.5786 0.2468 288.24);
+@color-syntax-brown-dark: oklch(0.7912 0.0755 188.24);
+@color-syntax-pink-dark: oklch(0.6709 0.1448 17);
+@color-syntax-violet-dark: oklch(0.6936 0.1635 318.21);
+@color-syntax-grey-dark: oklch(0.7621 0.0202 262.99);
 
 /* == Box model properties == */
 /* `--*size` variables are used for `*width` & `*height` properties. */
