--- a/resources/skins.citizen.styles/common/features.less
+++ b/resources/skins.citizen.styles/common/features.less
@@ -26,9 +26,9 @@
 	--color-subtle-hsl__s: 0%;
 	--color-placeholder-hsl__s: 0%;
 
-	--border-color-base: rgba( 255, 255, 255, 0.1 );
-	--border-color-subtle: rgba( 255, 255, 255, 0.05 );
-	--border-color-interactive: rgba( 255, 255, 255, 0.15 );
+	--border-color-base: oklch(0.2134 0 0);
+	--border-color-subtle: oklch(0.1591 0 0);
+	--border-color-interactive: oklch(0.2686 0 0);
 }
 
 // T365102 invert class specifically for image related element
