--- a/resources/skins.citizen.styles/common/features.less
+++ b/resources/skins.citizen.styles/common/features.less
@@ -26,9 +26,10 @@
 	--color-subtle-hsl__s: 0%;
 	--color-placeholder-hsl__s: 0%;
 
-	--border-color-base: oklch(0.2134 0 0);
+	--border-color-base:oklch(0.2178 0 0);
 	--border-color-subtle: oklch(0.1591 0 0);
-	--border-color-interactive: oklch(0.2686 0 0);
+	--border-color-muted: oklch(0.2686 0 0);
+	--border-color-interactive: oklch(0.1344 0 0);
 }
 
 // T365102 invert class specifically for image related element
