--- a/resources/skins.citizen.styles/tokens-theme-dark.less
+++ b/resources/skins.citizen.styles/tokens-theme-dark.less
@@ -60,11 +60,11 @@
 	--background-color-icon--hover: ~'rgba( 255, 255, 255, var( --opacity-icon-base--hover ) )';
 	--background-color-icon--active: ~'rgba( 255, 255, 255, var( --opacity-icon-base--active ) )';
 
-	--border-color-base: rgba( 255, 255, 255, 0.08 );
-	--border-color-subtle: rgba( 255, 255, 255, 0.05 );
-	--border-color-muted: rgba( 255, 255, 255, 0.03 );
-	--border-color-interactive: rgba( 255, 255, 255, 0.11 );
-
+	--border-color-base: oklch(0.23 0.01 264);
+	--border-color-subtle: oklch(0.20 0.01 274);
+	--border-color-muted: oklch(0.18 0.01 264);
+	--border-color-interactive: oklch(0.26 0.01 264);
+	
 	--opacity-glass: 0.65;
 
 	--shadow-color-oklch__l: 6%;
