--- a/resources/variables.less
+++ b/resources/variables.less
@@ -62,18 +62,18 @@
  * Based on Material Theme Palenight
  * https://material-theme.site
  */
-@color-syntax-red-dark: oklch(0.6484 0.2098 25.22);
-@color-syntax-orange-dark: oklch(0.7273 0.0949 63.82);
-@color-syntax-yellow-dark: oklch(0.8249 0.097 82.26);
-@color-syntax-green-dark: oklch(0.7683 0.1103 133);
-@color-syntax-cyan-dark: oklch(0.7231 0.0916 206.31);
-@color-syntax-blue-dark: oklch(0.6149 0.1394 244.93);
-@color-syntax-paleblue-dark: oklch(0.7304 0.1213 245.3);
-@color-syntax-purple-dark: oklch(0.5786 0.2468 288.24);
-@color-syntax-brown-dark: oklch(0.7912 0.0755 188.24);
-@color-syntax-pink-dark: oklch(0.6709 0.1448 17);
-@color-syntax-violet-dark: oklch(0.6936 0.1635 318.21);
-@color-syntax-grey-dark: oklch(0.7621 0.0202 262.99);
+@color-syntax-red-dark: oklch( 0.6709 0.1448 17 );
+@color-syntax-orange-dark: oklch( 0.8053 0.1563 63.82 );
+@color-syntax-yellow-dark: oklch( 0.8249 0.097 82.26 );
+@color-syntax-green-dark: oklch(0.7682 0.1099 133.07);
+@color-syntax-cyan-dark: oklch( 0.7231 0.0916 206.31 );
+@color-syntax-blue-dark: oklch(0.7282 0.122 246);
+@color-syntax-paleblue-dark: oklch(0.7282 0.122 246);
+@color-syntax-purple-dark: oklch( 0.6936 0.1635 318.21 );
+@color-syntax-brown-dark: @color-syntax-pink-dark;
+@color-syntax-pink-dark: oklch(0.71 0.17 12);
+@color-syntax-violet-dark: oklch( 0.6936 0.1635 318.21 );
+@color-syntax-grey-dark: oklch( 0.6214 0.0296 262.28 );
 
 /* == Box model properties == */
 /* `--*size` variables are used for width & height properties. */
